# bulk-rename-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  fix.sh  install.ps1  install.sh  release.sh  test.sh
.cargo/: config.toml
.github/workflows/: bmv.yml  ci.yml  publish.yml
src/: bulk_rename.rs  callback.rs  engine.rs  error.rs  lib.rs  main.rs  models.rs
tests/: cli_test.rs  collision_test.rs  complex_test.rs  engine_test.rs  python_script_test.rs  symlink_test.rs  transaction_test.rs  undo_test.rs
