[package]
name = "bmv"
version = "0.1.0"
edition = "2021"
authors = ["Fredy Wijaya"]

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
regex = "1.10.6"
walkdir = "2.5.0"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.12.0"
assert_cmd = "2.0.16"
predicates = "3.1.2"
