[package]
name = "bulk-rename-rs"
version = "0.4.1"
edition = "2024"
authors = ["Fredy Wijaya"]
description = "A powerful bulk file renaming tool and library with regex support, Python scripting, and transactional safety."
license = "Apache-2.0"
repository = "https://github.com/fredyw/bulk-rename-rs"
readme = "README.md"
keywords = ["rename", "bulk", "regex", "python", "scripting"]
categories = ["command-line-utilities", "filesystem"]
homepage = "https://github.com/fredyw/bulk-rename-rs"

[[bin]]
name = "bren"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clap_complete = "4.5.16"
regex = "1.10.6"
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
chrono = "0.4"
rustpython-vm = { version = "0.5.0", features = ["freeze-stdlib"] }
rustpython-stdlib = "0.5.0"
rustpython-pylib = { version = "0.5.0", features = ["freeze-stdlib"] }

[dev-dependencies]
tempfile = "3.12.0"
assert_cmd = "2.0.16"
predicates = "3.1.2"
